# lotr2-rl

./: .gitignore  README.md  main.py  pyproject.toml
configs/: lotr2.yaml
configs/lotr2/: config.yaml  preload.txt
lotr2_rl/: __init__.py  async_utils.py  evaluator.py  run_dos.py  run_gym.py  utils.py
lotr2_rl/emulators/dos/: browser_controller.py  website_server.py
lotr2_rl/gyms/: lotr2_gym.py
lotr2_rl/llm/: fake_llm_client.py  realtime_agent.py
src/: consts.py  evaluator.py  folder_web_server.py  run_dos.py  run_gym.py
src/emulators/dos/: browser_controller.py  website_server.py
src/gyms/: lotr2_gym.py
src/llm/: realtime_agent.py
src/lotr2-rl/: action_grid.ipynb
